--- a/ComfyUI_Colab.ipynb
+++ b/ComfyUI_Colab.ipynb
@@ -52,8 +52,9 @@
         "output_path = 'COMFY' #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ## Only check the models you are going to use:\n",
-        "#@markdown ### Flux models\n",
-        "SD35 = False #@param{type: \"boolean\"}\n",
+        "#@markdown ### SD 3.5 models\n",
+        "SD35L = False #@param{type: \"boolean\"}\n",
+        "SD35M = False #@param{type: \"boolean\"}\n",
         "#@markdown ### Flux models\n",
         "Flux1_dev = False #@param{type: \"boolean\"}\n",
         "\n",
@@ -65,7 +66,7 @@
         "Mistoon_Anime = False #@param{type: \"boolean\"}\n",
         "Anything_XL = False #@param{type: \"boolean\"}\n",
         "\n",
-        "#@markdown ### SD1.5 models\n",
+        "#@markdown ### SD 1.5 models\n",
         "\n",
         "Dreamshaper = False #@param{type: \"boolean\"}\n",
         "\n",
@@ -276,12 +277,13 @@
         "  print('⏱ Downloading models ...')\n",
         "  # Flux\n",
         "  if Flux1_dev:\n",
-        "    downloadModel('https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors')\n",
-        "    %cd {ComfyUIRoot}/models/checkpoints\n",
+        "    downloadModel('https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors'\n",
         "  #SD3.5\n",
-        "  if SD35:\n",
-        "    downloadModel('https://civitai.com/api/download/models/983309',rename='Sd35L.safetensors',token=Civitai_API_Key)\n",
-        "    %cd {ComfyUIRoot}/models/checkpoints\n",
+        "  if SD35L:\n",
+        "    downloadModel('https://civitai.com/api/download/models/983309',rename='SD35L.safetensors',token=Civitai_API_Key)\n",
+        "  if SD35ML:\n",
+        "    downloadModel('https://civitai.com/api/download/models/1003708',rename='SD35M.safetensors',token=Civitai_API_Key)\n",
+        "\n",
         "  # SDXL/Pony\n",
         "  if SDXLRefiner:\n",
         "    downloadModel('https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0.safetensors')\n",
@@ -320,9 +322,14 @@
         "  %cd {ComfyUIRoot}/models/vae\n",
         "  downloadModel(str(vae_to_install))\n",
         "\n",
-        "def install_CLIP(clip_to_install):\n",
+        "def install_CLIP():\n",
         "  %cd {ComfyUIRoot}/models/clip\n",
-        "  downloadModel(str(clip_to_install))\n",
+        "  print(f\"Downloading Clip Models\")\n",
+        "  downloadModel('https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors')\n",
+        "  if(SD35L or SD35M or Flux1_dev):\n",
+        "   downloadModel('https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors')\n",
+        "  if(SD35L or SD35M):\n",
+        "   downloadModel('https://huggingface.co/stabilityai/control-lora/resolve/main/revision/clip_vision_g.safetensors')\n",
         "\n",
         "def install_Upscaler():\n",
         "  %cd {ComfyUIRoot}/models/upscaler_models\n",
@@ -413,6 +420,7 @@
         "install_ControlNetModels()\n",
         "install_AnimateDiff()\n",
         "install_Upscaler()\n",
+        "install_CLIP()\n",
         "\n",
         "# Install custom nodes\n",
         "install_custom_nodes()\n",
@@ -528,7 +536,8 @@
         "|`26/10/24`| Added Civitai API Key|\n",
         "|`28/10/24`| Added custom LoRA and Checkpoint download|\n",
         "|`30/10/24`| Added output zipping|\n",
-        "|`31/10/24`| Added Upscalers and some Improvements|"
+        "|`31/10/24`| Added Upscalers and some Improvements|\n",
+        "|`09/11/24`| Added CLIP and SD 3.5 Medium|"
       ],
       "metadata": {
         "id": "PbEg9ngtB6V-"
