--- a/ComfyUI_Colab.ipynb
+++ b/ComfyUI_Colab.ipynb
@@ -277,7 +277,7 @@
         "  print('⏱ Downloading models ...')\n",
         "  # Flux\n",
         "  if Flux1_dev:\n",
-        "    downloadModel('https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors'\n",
+        "    downloadModel('https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors')\n",
         "  #SD3.5\n",
         "  if SD35L:\n",
         "    downloadModel('https://civitai.com/api/download/models/983309',rename='SD35L.safetensors',token=Civitai_API_Key)\n",
@@ -437,8 +437,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "taj3u4DjFmA3",
-        "cellView": "form"
+        "id": "taj3u4DjFmA3"
       },
       "execution_count": null,
       "outputs": []
