--- a/ComfyUI_Colab.ipynb
+++ b/ComfyUI_Colab.ipynb
@@ -28,7 +28,7 @@
         "2. You need a GPU: _Runtime_ > _Change runtime type_ > _Harware accelerator_ = _GPU_.\n",
         "3. You need to paste you Civit AI API Key to download certain models.\n",
         "4. Run the **`ComfyUI Setup`** code cell\n",
-        "6. Follow the URL link **`https://xxxxxxx.loca.lt`** to launch the app. The password is above the link.\n",
+        "6. Follow the URL link **`https://xxxxxxx.loca.lt`** to launch the app. The password is above the link. Or use Ngrok\n",
         "\n",
         "_Notes_:\n",
         "* Try pressing **`F5`** if the ComfyUI Manager is not loading properly.\n",
@@ -48,6 +48,8 @@
         "#@title 🚩 ComfyUI Setup\n",
         "#@markdown ### ▶️ CivitAI API Key (Required for certain models):\n",
         "Civitai_API_Key = '' #@param {type: \"string\"}\n",
+        "#@markdown ### ▶️ NGROK API Key (if using Ngrok):\n",
+        "NGROK_API_Key='' #@param {type: \"string\"}\n",
         "use_local_storage = True #@param {type:\"boolean\"}\n",
         "output_path = 'COMFY' #@param {type:\"string\"}\n",
         "\n",
@@ -60,7 +62,7 @@
         "\n",
         "#@markdown ### SDXL models\n",
         "\n",
-        "SDXL_1 = False #@param{type: \"boolean\"}\n",
+        "SDXL_1 = True #@param{type: \"boolean\"}\n",
         "JuggernautXL_v8 = False #@param{type: \"boolean\"}\n",
         "Pony_Diffusion_XL_v6 = False #@param{type: \"boolean\"}\n",
         "Mistoon_Anime = False #@param{type: \"boolean\"}\n",
@@ -86,8 +88,14 @@
         "SDXL_ControlNet_models = True #@param{type: \"boolean\"}\n",
         "IP_Adapter_models = True #@param{type: \"boolean\"}\n",
         "\n",
+        "#@markdown ### ControlNet models:\n",
+        "clip_l = True #@param{type: \"boolean\"}\n",
+        "t5xxl = True #@param{type: \"boolean\"}\n",
+        "clip_vision_g = False #@param{type: \"boolean\"}\n",
+        "google_t5_v1 = True #@param{type: \"boolean\"}\n",
+        "\n",
         "#@markdown ### ▶️ Extra ComfyUI arguments\n",
-        "Extra_arguments = '--disable-smart-memory' #@param {type: \"string\"}\n",
+        "Extra_arguments = '--disable-smart-memory --port 8188' #@param {type: \"string\"}\n",
         "\n",
         "Clear_Log = True #@param{type: \"boolean\"}\n",
         "\n",
@@ -302,8 +310,8 @@
         "    downloadModel('https://civitai.com/api/download/models/128713',rename=\"DreamShaper.safetensors\",token=Civitai_API_Key)\n",
         "\n",
         "  if Custom_Model_URL and Custom_Model_Name:\n",
-        "        print(f\"Downloading custom model: {Custom_Model_Name}\")\n",
-        "        downloadModel(Custom_Model_URL, rename=Custom_Model_Name, token=Civitai_API_Key)\n",
+        "    print(f\"Downloading custom model: {Custom_Model_Name}\")\n",
+        "    downloadModel(Custom_Model_URL, rename=Custom_Model_Name, token=Civitai_API_Key)\n",
         "\n",
         "\n",
         "def install_LoRAModels():\n",
@@ -325,14 +333,17 @@
         "def install_CLIP():\n",
         "  %cd {ComfyUIRoot}/models/clip\n",
         "  print(f\"Downloading Clip Models\")\n",
-        "  downloadModel('https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors')\n",
-        "  if(SD35L or SD35M or Flux1_dev):\n",
+        "  if(clip_l):\n",
+        "    downloadModel('https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors')\n",
+        "  if(t5xxl):\n",
         "   downloadModel('https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors')\n",
-        "  if(SD35L or SD35M):\n",
+        "  if(clip_vision_g):\n",
         "   downloadModel('https://huggingface.co/stabilityai/control-lora/resolve/main/revision/clip_vision_g.safetensors')\n",
+        "  if(google_t5_v1):\n",
+        "    downloadModel('https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/resolve/main/t5xxl_fp8_e4m3fn.safetensors')\n",
         "\n",
         "def install_Upscaler():\n",
-        "  %cd {ComfyUIRoot}/models/upscaler_models\n",
+        "  %cd {ComfyUIRoot}/models/upscale_models\n",
         "  downloadModel('https://huggingface.co/ai-forever/Real-ESRGAN/resolve/main/RealESRGAN_x2.pth')\n",
         "  downloadModel('https://huggingface.co/FacehugmanIII/4x_foolhardy_Remacri/resolve/main/4x_foolhardy_Remacri.pth')\n",
         "\n",
@@ -388,22 +399,48 @@
         "    downloadModel('https://huggingface.co/h94/IP-Adapter-FaceID/resolve/main/ip-adapter-faceid_sdxl.bin')\n",
         "    !pip install insightface\n",
         "\n",
+        "def ngrok_thread(port):\n",
+        "  PASSWORD='googlecolab'\n",
+        "  while True:\n",
+        "      time.sleep(0.5)\n",
+        "      sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+        "      result = sock.connect_ex(('127.0.0.1', port))\n",
+        "      if result == 0:\n",
+        "        break\n",
+        "      sock.close()\n",
+        "  ngrok.set_auth_token(NGROK_API_Key)\n",
+        "  http_tunnel = ngrok.connect(port, auth=f\"{PASSWORD}:{PASSWORD}\")\n",
+        "  print(f'Username/password: {PASSWORD}')\n",
+        "  print(f'ngrok public URL: {http_tunnel.public_url}')\n",
+        "\n",
         "#################################\n",
         "\n",
         "\n",
         "!pkill -f 'python main.py'  # Kill any existing ComfyUI instances\n",
         "!rm -rf /content/ComfyUI/logs/*  # Clear old logs\n",
         "\n",
+        "# Get secrets\n",
+        "from google.colab import userdata\n",
+        "try:\n",
+        "  NGROK_API_Key = userdata.get('NGROK_API_Key')\n",
+        "  print('Used NGROK secret.')\n",
+        "  Civitai_API_Key = userdata.get('Civitai_API_Key')\n",
+        "  print('Used Civitai secret.')\n",
+        "except:\n",
+        "  pass\n",
+        "\n",
         "# Define folders\n",
         "root = '/content/'\n",
         "ComfyUIRoot = root + '/ComfyUI'\n",
         "customNodeRoot = ComfyUIRoot + '/custom_nodes/'\n",
         "\n",
+        "\n",
         "# Install ComfyUI\n",
         "!pip install --upgrade torch torchvision\n",
         "%cd {root}\n",
         "!git clone https://github.com/comfyanonymous/ComfyUI.git\n",
-        "\n",
+        "if version:\n",
+        "  !git checkout {version}\n",
         "%cd {ComfyUIRoot}\n",
         "!pip install -r requirements.txt\n",
         "\n",
@@ -412,6 +449,11 @@
         "\n",
         "\n",
         "!apt-get -y install -qq aria2\n",
+        "\n",
+        "# ngrok\n",
+        "if NGROK_API_Key:\n",
+        "  %pip install pyngrok\n",
+        "  from pyngrok import ngrok\n",
         "\n",
         "# Install models\n",
         "install_Models()\n",
@@ -429,12 +471,15 @@
         "!npm install -g localtunnel\n",
         "if Clear_Log:\n",
         "  clear()\n",
-        "threading.Thread(target=iframe_thread, daemon=True, args=(8188,)).start()\n",
+        "if NGROK_API_Key:\n",
+        "  port = 8188\n",
+        "  threading.Thread(target=ngrok_thread, daemon=True, args=(port,)).start()\n",
+        "else:\n",
+        "  # Local tunnel\n",
+        "  !npm install -g localtunnel\n",
+        "  threading.Thread(target=iframe_thread, daemon=True, args=(8188,)).start()\n",
         "%cd /content/ComfyUI\n",
-        "!python main.py --dont-print-server --output-directory {image_output_path} --input-directory {image_input_path} {Extra_arguments}\n",
-        "\n",
-        "\n",
-        "\n"
+        "!python main.py --dont-print-server --output-directory {image_output_path} --input-directory {image_input_path} {Extra_arguments}\n"
       ],
       "metadata": {
         "id": "taj3u4DjFmA3"
@@ -536,7 +581,8 @@
         "|`28/10/24`| Added custom LoRA and Checkpoint download|\n",
         "|`30/10/24`| Added output zipping|\n",
         "|`31/10/24`| Added Upscalers and some Improvements|\n",
-        "|`09/11/24`| Added CLIP and SD 3.5 Medium|"
+        "|`09/11/24`| Added CLIP and SD 3.5 Medium|\n",
+        "|`15/11/24`| Added Ngrok support and Colab secrets for API Keys|"
       ],
       "metadata": {
         "id": "PbEg9ngtB6V-"
